us-east-2/apps/spring-petclinic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-service
  namespace: spring-petclinic
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: spring-petclinic-service
    app.kubernetes.io/name: spring-petclinic
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
